# shadetoy_rs

./: .gitignore  .rusty-hook.toml  Cargo.toml  build.rs  index.html  shadertoy_rs.js
.github/workflows/: rust.yml
assets/: sw.js
src/: .shader.frag.swp  app.rs  lib.rs  main.rs  shader.frag  shader.frag.spv  shader.frag.wgsl  shader.vert  shader.vert.spv  shader.vert.wgsl
src/app/: default.glsl  shader.frag  shader.frag.spv  shader.rs  shader.vert  shader.vert.spv
src/app/test/: error.frag  error.frag.error
