[package]
name = "shadertoy_rs"
version = "0.1.0"
authors = []
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
] }
wgpu = { version = "23.0.1", features = ["spirv"] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
naga = { version = "24.0.0", features = ["glsl-in", "wgsl-out"] }
egui_logger = "0.6.2"
anyhow = { version = "1.0.95", features = ["backtrace"] }
egui_extras = { version = "0.30.0", features = ["syntect"] }
strfmt = "0.2.4"
std140 = "0.2.6"
instant = "0.1.13"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "8.0.0"
shaderc = "0.8.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[package.metadata.shaderc]
use_installed_libs = true
[patch.crates-io]

[dev-dependencies]
rusty-hook = "0.11.2"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
shaderc = "0.8.3"
strfmt = "0.2.4"


# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
